--- a/styles.css
+++ b/styles.css
@@ -373,6 +373,11 @@ ul {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
 button {
   display: flex;
   justify-content: center;
@@ -388,6 +393,7 @@ button {
   border-radius: 25px;
   color: aliceblue;
   border: 0;
+  cursor: pointer;
 }
 
 .mobile-navbar-background {
@@ -417,7 +423,7 @@ h1 {
   top: 4%;
   margin-left: 1px;
   transform: translateX(-50%);
-  z-index: 1;
+  z-index: 0;
   transition: all ease-in-out 0.6s;
 }
 
@@ -587,7 +593,7 @@ h2 {
   position: absolute;
   bottom: -7px;
   left: 20px;
-  background-image: url("/Vector.png");
+  background-image: url("./assets/Vector.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -609,12 +615,12 @@ h2 {
   position: absolute;
   bottom: -3px;
   left: 2px;
-  background-image: url("/Vector2.png");
+  background-image: url("./assets/Vector2.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 30px;
-  height: 5px;
+  width: 0px;
+  height: 7px;
   transition: ease-in-out all 0.2s;
 }
 
@@ -639,40 +645,40 @@ h2 {
 #icon-terminal {
   top: 39%;
   left: 30%;
-  background-image: url("terminal.png");
+  background-image: url("./assets/terminal.png");
 }
 
 #icon-object {
   top: 33%;
   left: 25%;
 
-  background-image: url("object.png");
+  background-image: url("./assets/object.png");
 }
 
 #icon-bracket {
   top: 25%;
   left: 29%;
 
-  background-image: url("bracket.png");
+  background-image: url("./assets/bracket.png");
 }
 
 #icon-social {
   top: 27%;
   left: 69%;
-  background-image: url("share.png");
+  background-image: url("./assets/share.png");
 }
 
 #icon-folder {
   top: 33%;
   left: 75%;
 
-  background-image: url("folder.png");
+  background-image: url("./assets/folder.png");
 }
 
 #icon-camera {
   top: 40%;
   left: 69%;
-  background-image: url("camera.png");
+  background-image: url("./assets/camera.png");
 }
 .main-menu {
   display: flex;
@@ -697,7 +703,7 @@ h3:after {
   position: absolute;
   bottom: -3px;
   left: 13px;
-  background-image: url("/Vector2.png");
+  background-image: url("./assets/Vector2.png");
   width: 0px;
   height: 5px;
   transition: ease-in-out all 0.2s;
@@ -724,7 +730,7 @@ p {
   width: 93%;
   height: 330px;
   margin-top: 17%;
-  background-image: url("./routes.png");
+  background-image: url("./assets/routes.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -741,7 +747,7 @@ h4 {
 .skills-web-dev {
   width: 100%;
   height: 165px;
-  background-image: url("SkillsWB.png");
+  background-image: url("./assets/SkillsWB.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -749,7 +755,7 @@ h4 {
 
 .skills-growth {
   background-repeat: no-repeat;
-  background-image: url("./SkillsGrowth.png");
+  background-image: url("./assets/SkillsGrowth.png");
   width: 100%;
   height: 165px;
   background-repeat: no-repeat;
@@ -758,7 +764,7 @@ h4 {
 }
 
 .skills-editing {
-  background-image: url("./SkillsEditing.png");
+  background-image: url("./assets/SkillsEditing.png");
   width: 100%;
   height: 165px;
   background-repeat: no-repeat;
@@ -812,13 +818,6 @@ h4 {
   cursor: pointer;
 }
 
-.charlize-card {
-  position: relative;
-  background-image: url("/Charlize.png");
-  width: 411px;
-  height: 260px;
-}
-
 .context-card h6 {
   font-family: "Manrope";
   font-size: 22px;
@@ -851,7 +850,7 @@ h4 {
 }
 
 .logos {
-  background: url("/Stack1.png");
+  background: url("./assets/Stack1.png");
   width: 171px;
   height: 39px;
 }
@@ -878,7 +877,7 @@ h4 {
 
 .argentbank-card {
   position: relative;
-  background-image: url("/ArgentBank.png");
+  background-image: url("./assets/ArgentBank.png");
   width: 538px;
   height: 259px;
   background-size: contain;
@@ -887,7 +886,7 @@ h4 {
 }
 
 .logos2 {
-  background: url("/Stack2.png");
+  background: url("./assets/Stack2.png");
   width: 206px;
   height: 32px;
   background-size: contain;
@@ -897,7 +896,7 @@ h4 {
 
 .kaza-card {
   position: relative;
-  background-image: url("/Kaza.png");
+  background-image: url("./assets/Kaza.png");
   width: 538px;
   height: 259px;
   background-size: contain;
@@ -906,7 +905,7 @@ h4 {
 }
 
 .logos3 {
-  background: url("/Stack3.png");
+  background: url("./assets/Stack3.png");
   width: 170px;
   height: 37px;
   background-size: contain;
@@ -916,7 +915,7 @@ h4 {
 
 .sophie-card {
   position: relative;
-  background-image: url("/Sophie.png");
+  background-image: url("./assets/Sophie.png");
   width: 538px;
   height: 258px;
   background-size: contain;
@@ -925,7 +924,7 @@ h4 {
 }
 
 .logos4 {
-  background: url("/Stack4.png");
+  background: url("./assets/Stack4.png");
   width: 175px;
   height: 36px;
   background-size: contain;
@@ -935,7 +934,7 @@ h4 {
 
 .ohmyfood-card {
   position: relative;
-  background-image: url("/Ohmyfood.png");
+  background-image: url("./assets/Ohmyfood.png");
   width: 538px;
   height: 258px;
   background-size: contain;
@@ -944,7 +943,7 @@ h4 {
 }
 
 .logos5 {
-  background: url("/Stack5.png");
+  background: url("./assets/Stack5.png");
   width: 126px;
   height: 36px;
   background-size: contain;
@@ -954,7 +953,7 @@ h4 {
 
 .booki-card {
   position: relative;
-  background-image: url("/Booki.png");
+  background-image: url("./assets/Booki.png");
   width: 538px;
   height: 258px;
   background-size: contain;
@@ -1202,7 +1201,7 @@ form input {
     width: 109%;
   }
   .header-contact h3 {
-    margin: 70px 0px 20px;
+    margin: 70px 30px 20px;
   }
 
   form {
@@ -1215,17 +1214,18 @@ form input {
     padding: 0px;
   }
 
-  #mobil-brush-anim-1 {
-    position: absolute;
-    bottom: -7px;
-    left: 20px;
-    background-image: url("/Vector.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 79px;
-    height: 9px;
-    transition: ease-in-out all 0.2s;
+  .anim-name {
+    width: 8px;
+    height: 80px !important;
+  }
+
+  .name-span {
+    margin-left: 11px;
+  }
+
+  .brush-anim-1,
+  .brush-anim-2 {
+    display: none;
   }
 
   .wrapper {
@@ -1248,7 +1248,10 @@ form input {
   .mobile-navbar-background {
     position: absolute;
     display: block;
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(20.5px);
+    -webkit-backdrop-filter: blur(20.5px);
     width: 70%;
     height: 100%;
     z-index: 1;
@@ -1263,6 +1266,7 @@ form input {
     align-items: flex-start;
     padding: 0;
     gap: 27px;
+    color: beige;
     z-index: 1;
   }
 
@@ -1277,14 +1281,14 @@ form input {
   .close-modal {
     position: absolute;
     display: block;
-    background: url(close-modal.svg);
-    width: 15px;
-    height: 15px;
-    top: 30px;
+    background: url("./assets/close-modal.svg");
+    width: 30px;
+    height: 20px;
+    top: 226px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    left: 15%;
+    left: 20%;
     transform: translateX(-50%);
   }
   .name {
@@ -1302,7 +1306,7 @@ form input {
   }
 
   h2 {
-    margin: 119px 10px 0px 10px;
+    margin: 119px 40px 0px 40px;
     font-size: 17px;
   }
 
@@ -1399,7 +1403,7 @@ form input {
     left: 20px;
     width: 35px;
     height: 35px;
-    background: url(open-modal.svg);
+    background: url("./assets/open-modal.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -1448,5 +1452,13 @@ form input {
   .footer {
     margin-top: 124px;
     margin-bottom: 124px;
+  }
+
+  .info-contact {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
   }
 }
