--- a/styles.css
+++ b/styles.css
@@ -730,7 +730,7 @@ p {
   width: 93%;
   height: 330px;
   margin-top: 17%;
-  background-image: url("./assets/routes.png");
+  background-image: url("./assets/Routes.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
