--- a/styles.css
+++ b/styles.css
@@ -1168,6 +1168,9 @@ form input {
     justify-content: center;
     align-items: center;
   }
+  .information-card {
+    margin: 0;
+  }
 
   .information-card img {
     display: none;
