--- a/styles.css
+++ b/styles.css
@@ -351,18 +351,79 @@ template {
 }
 
 /* ------------ RESET-CSS ----------- */
+
 body {
   padding: 20px 60px 0px 60px;
   background-color: rgba(13, 25, 39, 1);
   color: aliceblue;
   overflow-x: hidden;
+  position: relative;
 }
+
+.loader {
+  position: absolute;
+  z-index: 4;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(13, 25, 39, 1);
+  opacity: 0;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  transition: all 1s ease-in;
+}
+
+/* .loader:hover {
+  clip-path: polygon(200% 0%, 100% 0%, 100% 100%, 0% 200%);
+} */
+
+.animation-loader {
+  display: block;
+  height: 7px;
+  color: #0071e2;
+  width: 230px;
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: relative;
+}
+
+.animation-loader::before {
+  content: "";
+  z-index: 5;
+  position: absolute;
+  background: #ffffff;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  border-radius: 30px;
+  animation: moving 3s ease-in-out;
+}
+
+/* @keyframes moving {
+  50% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0;
+    right: 0;
+    left: unset;
+  }
+} */
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: "Manrope", sans-serif;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+  padding: 0px;
 }
 
 ul {
@@ -402,14 +463,17 @@ button {
 
 .background-light {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  left: 10%;
+  height: 900px;
   z-index: -2;
+  top: 0%;
   background: radial-gradient(
     38.04% 38.04% at 50% 50%,
     rgba(0, 0, 0, 0.52) 0%,
     rgba(0, 0, 0, 0) 100%
   );
+  opacity: 0.7;
 }
 h1 {
   position: relative;
@@ -435,7 +499,7 @@ h1 {
   margin-left: 1px;
   transform: translateX(-50%);
   z-index: 0;
-  transition: all ease-in-out 0.6s;
+  transition: all ease-in-out 0.2s;
 }
 
 .name {
@@ -469,8 +533,8 @@ h1 {
 }
 
 #l1 {
-  top: 20%;
-  left: -20%;
+  top: 3%;
+  left: -10%;
   background: linear-gradient(
     207.77deg,
     rgba(212, 183, 33, 0.4) 1.9%,
@@ -480,20 +544,20 @@ h1 {
 }
 
 #l2 {
-  top: 10%;
-  right: -24%;
+  top: 1%;
+  right: -14%;
   transform: rotate(-30deg);
   background: linear-gradient(
     207.77deg,
     rgba(212, 183, 33, 0.4) 1.9%,
-    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(84, 50, 184, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
 }
 
 #l3 {
-  top: 116%;
-  right: -29%;
+  top: 22%;
+  right: -19%;
   transform: rotate(-30deg);
   background: linear-gradient(
     207.77deg,
@@ -504,7 +568,7 @@ h1 {
 }
 
 #l4 {
-  top: 150%;
+  top: 26%;
   left: -25%;
   transform: rotate(-30deg);
   background: linear-gradient(
@@ -516,8 +580,8 @@ h1 {
 }
 
 #l5 {
-  top: 270%;
-  left: -30%;
+  top: 39%;
+  left: -20%;
   transform: rotate(-30deg);
   background: linear-gradient(
     207.77deg,
@@ -528,8 +592,8 @@ h1 {
 }
 
 #l6 {
-  top: 231%;
-  right: -28%;
+  top: 44%;
+  right: -18%;
   transform: rotate(-30deg);
   background: linear-gradient(
     207.77deg,
@@ -540,19 +604,19 @@ h1 {
 }
 
 #l7 {
-  top: 380%;
-  right: -23%;
-  transform: rotate(-30deg);
+  top: 65%;
+  right: -29%;
+  transform: rotate(-70deg);
   background: linear-gradient(
     207.77deg,
-    rgba(212, 183, 33, 0.4) 1.9%,
-    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
 }
 
 #l8 {
-  top: 489%;
+  top: 60%;
   right: 92%;
   transform: rotate(-30deg);
   background: linear-gradient(
@@ -564,8 +628,8 @@ h1 {
 }
 
 #l9 {
-  top: 594%;
-  right: -28%;
+  top: 90%;
+  right: -18%;
   transform: rotate(-30deg);
   background: linear-gradient(
     207.77deg,
@@ -576,7 +640,7 @@ h1 {
 }
 
 #l10 {
-  top: 663%;
+  top: 88%;
   right: 91%;
   transform: rotate(-30deg);
   background: linear-gradient(
@@ -679,43 +743,54 @@ h2 {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  transition: all 0.3s ease-out;
+  transition: all 0.4s ease-out;
 }
 
 #icon-terminal {
-  top: 49%;
+  top: 7%;
   left: 40%;
+  transform: rotate(190deg);
   background-image: url("./assets/terminal.png");
 }
 
 #icon-object {
-  top: 40%;
+  top: 5.5%;
   left: 36%;
-
+  transform: rotate(190deg);
   background-image: url("./assets/object.png");
 }
 
 #icon-bracket {
-  top: 36%;
+  top: 5%;
   left: 39%;
+  transform: rotate(190deg);
   background-image: url("./assets/bracket.png");
 }
 
 #icon-social {
-  top: 40%;
-  left: 60%;
+  top: 6%;
+  left: 58%;
+  transform: rotate(190deg);
+
   background-image: url("./assets/share.png");
 }
 
 #icon-folder {
-  top: 42%;
-  left: 55%;
+  top: 5%;
+  left: 57%;
+  width: 42px;
+  height: 42px;
+  transform: rotate(190deg);
   background-image: url("./assets/folder.png");
 }
 
 #icon-camera {
-  top: 46%;
-  left: 60%;
+  top: 7%;
+  left: 61%;
+  width: 42px;
+  height: 42px;
+  transform: rotate(190deg);
+
   background-image: url("./assets/camera.png");
 }
 .main-menu {
