--- a/styles.css
+++ b/styles.css
@@ -351,7 +351,10 @@ template {
 }
 
 /* ------------ RESET-CSS ----------- */
-
+html {
+  scroll-behavior: smooth;
+  cursor: default;
+}
 body {
   padding: 20px 60px 0px 60px;
   background-color: rgba(13, 25, 39, 1);
@@ -360,62 +363,6 @@ body {
   position: relative;
 }
 
-.loader {
-  position: absolute;
-  z-index: 4;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(13, 25, 39, 1);
-  opacity: 0;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-  transition: all 1s ease-in;
-}
-
-/* .loader:hover {
-  clip-path: polygon(200% 0%, 100% 0%, 100% 100%, 0% 200%);
-} */
-
-.animation-loader {
-  display: block;
-  height: 7px;
-  color: #0071e2;
-  width: 230px;
-  border-radius: 30px;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: relative;
-}
-
-.animation-loader::before {
-  content: "";
-  z-index: 5;
-  position: absolute;
-  background: #ffffff;
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  border-radius: 30px;
-  animation: moving 3s ease-in-out;
-}
-
-/* @keyframes moving {
-  50% {
-    width: 100%;
-  }
-
-  100% {
-    width: 0;
-    right: 0;
-    left: unset;
-  }
-} */
-
 nav {
   display: flex;
   justify-content: space-between;
@@ -423,7 +370,7 @@ nav {
   font-family: "Manrope", sans-serif;
   opacity: 0;
   transition: all 1s ease-in-out;
-  padding: 0px;
+  padding: 20px 10px 0px 10px;
 }
 
 ul {
@@ -437,6 +384,12 @@ ul {
 a {
   text-decoration: none;
   color: aliceblue;
+}
+
+a:hover {
+  color: #b6b6b6;
+
+  transition: all 0.2s ease-in;
 }
 
 button {
@@ -455,6 +408,7 @@ button {
   color: aliceblue;
   border: 0;
   cursor: pointer;
+  transition: all 0.7s ease-in;
 }
 
 .mobile-navbar-background {
@@ -524,7 +478,9 @@ h1 {
 }
 
 .light {
+  overflow-anchor: none;
   position: absolute;
+  overflow-x: hidden;
   width: 594.75px;
   height: 594.75px;
   filter: blur(100px);
@@ -805,7 +761,6 @@ h3 {
   position: relative;
   font-family: "Manrope";
   font-weight: 700;
-  margin-top: 400px;
   margin-bottom: 10px;
   font-size: 52px;
   text-align: center;
@@ -813,6 +768,8 @@ h3 {
 }
 
 #about-me {
+  box-sizing: border-box;
+  padding-top: 300px;
   margin-bottom: 50px;
 }
 
@@ -898,11 +855,12 @@ h4 {
 
 #skills {
   padding-left: 10px;
-  margin: 200px 0px 50px 0px;
+  padding-top: 250px;
+  margin: 0px 0px 50px 0px;
 }
 
 #works {
-  margin: 250px 0px 100px 0px;
+  margin: 250px 0px 50px 0px;
 }
 
 /* ---CARD-- */
@@ -1357,6 +1315,10 @@ h4 {
     padding: 0px;
   }
 
+  .brush {
+    display: none;
+  }
+
   .anim-name {
     width: 8px;
     height: 80px !important;
@@ -1459,7 +1421,7 @@ h4 {
   }
 
   #about-me {
-    margin-top: 300px;
+    margin-top: 200px;
     margin-bottom: 50px;
     font-size: 38px;
   }
