--- a/styles.css
+++ b/styles.css
@@ -491,36 +491,135 @@ h1 {
 #l1 {
   top: 3%;
   left: -10%;
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
     rgba(212, 33, 140, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(212, 33, 140, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l2 {
   top: 1%;
   right: -14%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
     rgba(84, 50, 184, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(84, 50, 184, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l3 {
   top: 22%;
   right: -19%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(32, 104, 227, 0.4) 1.9%,
     rgba(43, 139, 229, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(32, 104, 227, 0.4)),
+    color-stop(37.15%, rgba(43, 139, 229, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#662068e3', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l4 {
@@ -539,72 +638,270 @@ h1 {
   top: 39%;
   left: -20%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(32, 104, 227, 0.4) 1.9%,
     rgba(43, 139, 229, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(32, 104, 227, 0.4)),
+    color-stop(37.15%, rgba(43, 139, 229, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#662068e3', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l6 {
   top: 44%;
   right: -18%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
-    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(84, 50, 184, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(84, 50, 184, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(84, 50, 184, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l7 {
   top: 65%;
   right: -29%;
   transform: rotate(-70deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(32, 104, 227, 0.4) 1.9%,
     rgba(43, 139, 229, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(32, 104, 227, 0.4)),
+    color-stop(37.15%, rgba(43, 139, 229, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(32, 104, 227, 0.4) 1.9%,
+    rgba(43, 139, 229, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#662068e3', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l8 {
   top: 60%;
   right: 92%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
     rgba(212, 33, 140, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(212, 33, 140, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l9 {
   top: 90%;
   right: -18%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
     rgba(212, 33, 140, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(212, 33, 140, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 #l10 {
   top: 88%;
   right: 91%;
   transform: rotate(-30deg);
-  background: linear-gradient(
-    207.77deg,
+  background: -moz-linear-gradient(
+    top,
     rgba(212, 183, 33, 0.4) 1.9%,
     rgba(212, 33, 140, 0.4) 37.15%,
     rgba(54, 72, 169, 0.4) 100.9%
   );
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(1.9%, rgba(212, 183, 33, 0.4)),
+    color-stop(37.15%, rgba(212, 33, 140, 0.4)),
+    color-stop(100.9%, rgba(54, 72, 169, 0.4))
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -o-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: -ms-linear-gradient(
+    top,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(212, 183, 33, 0.4) 1.9%,
+    rgba(212, 33, 140, 0.4) 37.15%,
+    rgba(54, 72, 169, 0.4) 100.9%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66d4b721', endColorstr='#663648a9',GradientType=0 );
 }
 
 h2 {
@@ -1360,14 +1657,17 @@ h4 {
     width: 109%;
   }
   #work-together {
-    margin: 70px 30px 20px;
+    margin: 190px 30px 20px;
+    font-size: 34px;
   }
 
   #contact-form {
     width: 75%;
   }
 }
-
+.background-light {
+  display: none;
+}
 @media (max-width: 750px) {
   body {
     padding: 0px;
@@ -1479,7 +1779,7 @@ h4 {
   }
 
   #about-me {
-    margin-top: 200px;
+    margin-top: 0px;
     margin-bottom: 50px;
     font-size: 38px;
   }
@@ -1552,6 +1852,7 @@ h4 {
 
   .cards {
     padding: 0px;
+    gap: 100px;
   }
 
   p {
@@ -1613,17 +1914,18 @@ h4 {
   }
 
   #footer {
-    margin-top: 470px;
+    margin-top: 320px;
     margin-bottom: 124px;
   }
 
   .email > a {
     font-size: 25px;
-    padding-top: 376px;
+    padding-top: 265px;
   }
 
   .click_here {
-    display: none;
+    bottom: -245px;
+    right: 85px;
   }
   .info-contact {
     display: flex;
