--- a/styles.css
+++ b/styles.css
@@ -1758,12 +1758,10 @@ h4 {
     z-index: 2;
     width: 100%;
     height: 100vh;
-    background: rgba(51, 35, 65, 0.1);
+    background: rgba(36, 35, 65, 0.479);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(13.5px);
     -webkit-backdrop-filter: blur(13.5px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
     overflow: hidden;
   }
   nav > li {
@@ -2018,16 +2016,17 @@ h4 {
   }
 
   #l1 {
-    top: 17%;
-    left: 11%;
+    top: 1%;
+    left: 111%;
+    transform: rotate(39deg);
   }
   #l2 {
-    top: 1%;
-    right: -32%;
+    top: 4%;
+    right: 82%;
   }
 
   #l3 {
-    top: 32%;
+    top: 28%;
     right: 8%;
   }
 
